--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: device_policy_controller
 description: A Flutter plugin package for managing device policies and restrictions (DPC), with features like kiosk mode app locking.
-version: 0.0.1
-repository: https://github.com/itisnajim/device-policy-controller
+version: 0.0.1+1
+repository: https://github.com/itisnajim/device_policy_controller
 
 topics:
   - dpc
