--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,9 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.itisnajim.device_policy_controller">
 
-  <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions"/>
-  <uses-permission android:name="android.permission.REBOOT" tools:ignore="ProtectedPermissions"/>
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name=
+      "android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+  <uses-permission android:name=
+      "android.permission.GET_ACCOUNTS"/>
+  <uses-permission android:name=
+      "android.permission.MANAGE_ACCOUNTS"/>
+  <uses-permission android:name=
+      "android.permission.WRITE_SYNC_SETTINGS"/>
+  <uses-permission android:name=
+      "com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
   <application
       android:name="${applicationName}">
@@ -11,7 +19,7 @@
         android:name=".AppDeviceAdminReceiver"
         android:enabled="true"
         android:permission="android.permission.BIND_DEVICE_ADMIN"
-        android:exported="false"
+        android:exported="true"
         >
       <meta-data
           android:name="android.app.device_admin"
@@ -19,6 +27,7 @@
 
       <intent-filter>
         <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
       </intent-filter>
     </receiver>
   </application>
